--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
                     </ul>
                 </div>
             </div>
+            <!-- Otro integrante -->
+            <div class="col-xl-3 col-sm-6 mb-5">
+                <div class="bg-white rounded shadow-sm py-5 px-4">
+                    <img class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" src="images/integrante2.png" width="100">
+                    <h5 class="mb-0">NOMBRE INTEGRANTE #3</h5>
+                    <span class="small text-uppercase text-muted">Flamante Ingeniero en Software</span>
+                    <ul class="mb-0 list-inline mt-3">
+                        <p>SUPER BREVE DESCRIPCION TUYA AQUI</p>
+                    </ul>
+                </div>
+            </div>
 
         </div>
 
