--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         <div class="row text-center justify-content-center">
             <!-- Aun NO toquen este xd -->
             <div class="bg-white rounded shadow-sm py-5 px-4">
-                <img class="img-fluid" src="https://i.giphy.com/media/OnQqgkPWJ17DG/giphy.webp">
-                <h5>Esta foto es de un perrito que baila</h5>
-                <p>Lo quiero mucho al perrito</p>
-                <p>Baila muy perron</p>
+                
+                <img class="img-fluid" src="https://media.giphy.com/media/ICOgUNjpvO0PC/giphy.gif">
+                <h5>Esta foto es de un gatito muy adorable</h5>
+                <p>Un gato para la soledad</p>
+                <p>Es muy tierno</p>
             </div>
 
         </div>
