--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <div class="row text-center justify-content-center">
             <!-- Aun NO toquen este xd -->
             <div class="bg-white rounded shadow-sm py-5 px-4">
-                <img class="img-fluid" src="https://i.giphy.com/media/OnQqgkPWJ17DG/giphy.webp">
-                <h5>Esta foto es de un perrito que baila</h5>
+                <img class="img-fluid" src="https://media.giphy.com/media/ZCdRHIclu9FPa/giphy.gif">
+                <h5>Este es el mejor compañero que puedes tener</h5>
                 <p>Lo quiero mucho al perrito</p>
-                <p>Baila muy perron</p>
+                <p>Es bien chido UwU</p>
             </div>
 
         </div>
