se cambio la informacion del tercer integrante

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <div class="col-xl-3 col-sm-6 mb-5">
                 <div class="bg-white rounded shadow-sm py-5 px-4">
                     <img class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" src="images/integrante2.png" width="100">
-                    <h5 class="mb-0">NOMBRE INTEGRANTE #3</h5>
-                    <span class="small text-uppercase text-muted">Flamante Ingeniero en Software</span>
+                    <h5 class="mb-0">Oscar Gonzalez Leyva</h5>
+                    <span class="small text-uppercase text-muted">Master Googler</span>
                     <ul class="mb-0 list-inline mt-3">
-                        <p>SUPER BREVE DESCRIPCION TUYA AQUI</p>
+                        <p>Aquel que se la pasa repitiendo que no quiere reinventar la rueda</p>
                     </ul>
                 </div>
             </div>
